# cordova-plugin-stockfish

./: .gitignore  CMakeLists.txt  plugin.xml  stockfish.cmake
android/jni/stockfishjni/: stockfishjni.cpp
src/android/jni/stockfishjni/: stockfishjni.cpp
src/ios/: CordovaPluginStockfish.h  CordovaPluginStockfish.mm
src/ios/stockfishios/: stockfishcli.h  stockfishios.h
src/share/stockfish/src/: uci.cpp
tests/: main.cpp
